# xkcptun

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_CN.md  README.md  client.json  commandline.c  commandline.h  contributors.md  debug.c  debug.h  ikcp.c  ikcp.h  json.c  jwHash.c  jwHash.h  main.c  server.json  tcp_client.c  tcp_client.h  tcp_proxy.c  tcp_proxy.h  version.h  xkcp.json  xkcp_client.c  xkcp_client.h  xkcp_config.c  xkcp_config.h  xkcp_mon.c  xkcp_mon.h  xkcp_server.c  xkcp_server.h  xkcp_spy.c  xkcp_svr_demo.c  xkcp_util.c  xkcp_util.h  xkcptun.service
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql-buildscript.sh
